# lol-game-data-snapshot

./: .gitignore  README.md  metadata.json  pyproject.toml
.github/workflows/: update.yml
global/default/v1/: champion-rune-recommendations.json  champion-summary.json  championperkstylemap.json  game-mode-mutators.json  items.json  maps.json  objectives.json  perks.json  perkstyles.json  queues.json  skinlines.json  summoner-spells.json  universes.json
global/default/v1/champions/: 1.json  10.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  117.json  119.json  12.json  120.json  121.json  122.json  126.json  127.json  13.json  131.json  133.json  134.json  136.json  14.json  141.json  142.json  143.json  145.json  147.json  15.json  150.json  154.json  157.json  16.json  (+133 more)
global/zh_CN/v1/: champion-summary.json  game-mode-mutators.json  items.json  maps.json  objectives.json  perks.json  perkstyles.json  queues.json  skinlines.json  summoner-spells.json  universes.json
global/zh_CN/v1/champions/: 1.json  10.json  101.json  102.json  103.json  104.json  105.json  (+166 more)
scripts/: check-update.sh
src/lol_game_data_snapshot/: __init__.py  check_update.py  cli.py  config.py  lcu_resources.py  manifest_resolver.py  metadata.py  riot_manifest_cli.py  snapshot_builder.py  targets.py  wad_extract.py
tests/: test_check_update.py  test_cli_logging.py  test_import.py  test_manifest_resolver.py  test_metadata.py  test_riot_manifest_cli.py  test_snapshot_builder.py  test_targets.py
